@@ -1,9 +1,13 @@
 package com.bamboo.tool.contributor;
 
+import com.bamboo.tool.config.BambooToolComponent;
+import com.bamboo.tool.config.model.ProjectInfo;
 import com.bamboo.tool.configurable.BambooApiFilterConfiguration;
+import com.bamboo.tool.configurable.ProjectFileterConfiguration;
+import com.bamboo.tool.db.entity.BambooApiMethod;
 import com.bamboo.tool.enums.RequestMethod;
-
 import com.bamboo.tool.view.component.actions.SearchEverywhereFiltersAction;
+import com.bamboo.tool.view.component.renderer.SearchEverywherePsiRenderer;
 import com.intellij.icons.AllIcons;
 import com.intellij.ide.actions.searcheverywhere.AbstractGotoSEContributor;
 import com.intellij.ide.actions.searcheverywhere.PersistentSearchEverywhereContributorFilter;
@@ -14,13 +18,17 @@ import com.intellij.navigation.ChooseByNameContributor;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.extensions.ExtensionPointName;
+import com.intellij.openapi.module.Module;
+import com.intellij.openapi.module.ModuleUtil;
 import com.intellij.openapi.project.Project;
+import com.intellij.psi.PsiElement;
+import com.intellij.util.TextWithIcon;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import javax.swing.*;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -30,23 +38,68 @@ import java.util.List;
  */
 public class BambooApiGotoContributor extends AbstractGotoSEContributor {
 
-    private final Project myProject;
+    private Project myProject;
 
-    private final PersistentSearchEverywhereContributorFilter<RequestMethod> myFilter;
+    private PersistentSearchEverywhereContributorFilter<RequestMethod> requestTypeFilter;
+    private PersistentSearchEverywhereContributorFilter<ProjectInfo> projectFilter;
+
 
     protected BambooApiGotoContributor(@NotNull AnActionEvent event) {
         super(event);
         myProject = event.getProject();
+        List<ProjectInfo> projectInfos = BambooToolComponent.getInstance().getState().getProjectInfos();
         BambooApiFilterConfiguration instance = BambooApiFilterConfiguration.getInstance(myProject);
-        myFilter = new PersistentSearchEverywhereContributorFilter(Arrays.asList(RequestMethod.values()), instance, (a) -> a.toString(), (e) -> null);
+        ProjectFileterConfiguration projectInstance = ProjectFileterConfiguration.getInstance(myProject);
+
+        requestTypeFilter = new PersistentSearchEverywhereContributorFilter(List.of(RequestMethod.values()), instance, (a) -> a.toString(), (e) -> null);
+        projectFilter = new PersistentSearchEverywhereContributorFilter(projectInfos, projectInstance, (a) -> {
+            ProjectInfo projectInfo = (ProjectInfo) a;
+            return projectInfo.getProjectName();
+        }, (e) -> null);
     }
 
     @Override
     protected @NotNull
     FilteringGotoByModel<RequestMethod> createModel(@NotNull Project project) {
         RequestMappingModel requestMappingModel = new RequestMappingModel(myProject, ExtensionPointName.<ChooseByNameContributor>create("com.bamboo.requestMappingContributor").getExtensionList());
-        requestMappingModel.setFilterItems(myFilter.getSelectedElements());
+        requestMappingModel.setFilterItems(requestTypeFilter.getSelectedElements());
+        requestMappingModel.setProjectInfos(projectFilter.getSelectedElements());
         return requestMappingModel;
+    }
+
+    @Override
+    public @NotNull ListCellRenderer<Object> getElementsRenderer() {
+        return new SearchEverywherePsiRenderer(this){
+
+            protected DefaultListCellRenderer getRightCellRenderer(final Object value) {
+                if(value instanceof BambooApiMethod){
+                    BambooApiMethod item = (BambooApiMethod) value;
+
+                    return new DefaultListCellRenderer(){
+                        @Override
+                        public Icon getIcon() {
+                            return AllIcons.Nodes.Module;
+                        }
+
+                        @Override
+                        public String getText() {
+                            return item.getProjectName();
+                        }
+                    };
+                }
+                return super.getRightCellRenderer(value);
+            }
+
+
+            protected @Nullable TextWithIcon getItemLocation(Object value) {
+                if(value instanceof BambooApiMethod){
+                    BambooApiMethod item = (BambooApiMethod) value;
+
+                    return new TextWithIcon(item.getProjectName(), AllIcons.Nodes.Module);
+                }
+                return super.getItemLocation(value);
+            }
+        };
     }
 
     @Override
@@ -64,10 +117,10 @@ public class BambooApiGotoContributor extends AbstractGotoSEContributor {
     @Override
     public @NotNull
     List<AnAction> getActions(@NotNull Runnable onChanged) {
-        BambooApiFilterConfiguration instance = BambooApiFilterConfiguration.getInstance(myProject);
+
         List<AnAction> actions = new ArrayList<>();
-        PersistentSearchEverywhereContributorFilter requestTypeFilter = new PersistentSearchEverywhereContributorFilter(Arrays.asList(RequestMethod.values()), instance, (a) -> a.toString(), (e) -> null);
-        actions.add(new SearchEverywhereFiltersAction(requestTypeFilter, onChanged,"请求类型过滤器", "请求类型过滤器", AllIcons.General.Filter));
+        actions.add(new SearchEverywhereFiltersAction(projectFilter, onChanged, "项目过滤器", "项目过滤器", AllIcons.Nodes.Module));
+        actions.add(new SearchEverywhereFiltersAction(requestTypeFilter, onChanged, "请求类型过滤器", "请求类型过滤器", AllIcons.General.Filter));
         return actions;
     }
 
